Archiving Implementation Complete - PBI 14

--- a/config.json
+++ b/config.json
@@ -28,6 +28,11 @@
   "HistoryDirectory": ".history",
   "AutoCleanup": true,
   "DatabasePath": "file_history.db",
+  "ArchivePath": "",
+  "SplitSizeBytes": null,
+  "CompressionLevel": "Optimal",
+  "ExtractArchive": false,
+  "ListArchive": false,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
